partners overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -427,6 +427,9 @@ nav {
   /*width: 100%;*/
   background-color: #d4d4d4;
   /*text-align: center;*/
+  max-width: 100vw;
+  overflow: hidden;
+  padding-top: 7vh;
 }
 #partners li{
   margin: 10px 30px;
